Fix: overwrapped padding size

--- a/index.css
+++ b/index.css
@@ -16,8 +16,8 @@ h1, h2 {
 
 main {
     padding: 1.5rem;
-    width: 100%;
-    max-width: 500px;
+    width: calc(100% - 3rem);
+    max-width: 750px;
 }
 
 main > section {
@@ -28,13 +28,14 @@ input, textarea {
     padding: 0.8rem;
     outline: none;
     font-family: 'Noto Sans JP', sans-serif;
-    width: 100%
+    width: calc(100% - 1.6rem);
 }
 
 #anki_csv {
     color: var(--fg-color);
     resize: vertical;
     height: 7rem;
+    width: 80%;
 }
 
 #input {
